--- a/SocialMedia - Part 2.ipynb
+++ b/SocialMedia - Part 2.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,19 +172,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = 'YOUR-CONSUMER-KEY'\n",
-    "consumer_secret = 'YOUR-CONSUMER-SECRET'\n",
-    "access_token = 'YOUR-ACCESS-TOKEN'\n",
-    "access_secret = 'YOUR-ACCESS-SECRET'"
+    "consumer_key = 'VyM2PhpgcxvTbuVP1NxoiOXCU'\n",
+    "consumer_secret = '9zNdJ9fUZSL8PFLXGAZdB2vcUbmbvcrhqiKxH0DNqsb4mt4ZQ3'\n",
+    "access_token = '1047863858071834624-Ygf8zqMJ4IjQ0LO1pT4LXHmvNhaInx'\n",
+    "access_secret = 'wVtVFclT3OL69zylDO9OXHaOem7MJmxlRYlPfqdmeddyv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,16 +209,16 @@
    "source": [
     "Now that we have a corpus of tweets, what do we want to do with them? Turning a relatively vague notion into a well-defined research question is often a significant challenge, as examination of the data often reveals both shortcomings and unforeseen opportunities.\n",
     "\n",
-    "In our case, we are interested in looking at tweets about smoking, but we're not quite sure exactly *what* we are looking for. We have a vague notion that we might learn something interesting, but understanding exactly what that is, and what sort of analyses we might need, will require a bit more work.\n",
+    "In our case, we are interested in looking at tweets about smoking, but we're not quite sure exactly what we are looking for. We have a vague notion that we might learn something interesting, but understanding exactly what that is, and what sort of analyses we might need, will require a bit more work.\n",
     "\n",
-    "In situations such as this, we might look at some of the data to form some preliminary impressions of the content. Specifically, we can look at indidividual tweets, assigning them to one or more categories - known as *codes* - based on their content.  We can add categories as needed to capture important ideas that we might want to refer back to. This practice - known as *open coding* allows us to begin to make sense of unfamiliar data sets. \n",
+    "In situations such as this, we might look at some of the data to form some preliminary impressions of the content. Specifically, we can look at indidividual tweets, assigning them to one or more categories - known as codes - based on their content. We can add categories as needed to capture important ideas that we might want to refer back to. This practice - known as open coding allows us to begin to make sense of unfamiliar data sets.\n",
     "\n",
-    "This sounds much more complicated than it is. For now, let's start with some of the data that you used  in [Part 1](SocialMedia%20-%20Part%201.ipynb). If you completed this exercise, you should have 100 tweets associated with the search term 'smoking' in a file names `tweets.json`. If you didn't complete this exercise, please go back and do so."
+    "This sounds much more complicated than it is. For now, let's start with some of the data that you used in Part 1. If you completed this exercise, you should have 100 tweets associated with the search term 'smoking' in a file names tweets.json. If you didn't complete this exercise, please go back and do so."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "print(tweets.countTweets())"
    ]
@@ -253,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,15 +282,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "smoking\n",
+      "2018-08-31 12:53:43.273575\n",
+      "Need some 420. #weed\n"
+     ]
+    }
+   ],
    "source": [
     "td = working[0]\n",
-    "print(tweets.getSearchTerm(id))\n",
-    "print(tweets.getSearchTime(id))\n",
+    "print(tweets.getSearchTerm(td))\n",
+    "print(tweets.getSearchTime(td))\n",
     "print(tweets.getText(td))"
    ]
   },
@@ -300,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +427,21 @@
     "        if 'codes' in tweet:\n",
     "            return tweet['codes']\n",
     "        else:\n",
-    "            return None"
+    "            return None\n",
+    "        \n",
+    "    # return a sorted list of tupes of the form (code,count), with the occurrence counts sorted in decreasing order\n",
+    "    def mostFrequentCodes(self):\n",
+    "        code_counts = {}\n",
+    "        for t,entry in self.tweets.items():\n",
+    "            if 'codes' in entry['tweet']:\n",
+    "                for curr_code in entry['tweet']['codes']:\n",
+    "                    if curr_code not in code_counts:\n",
+    "                        code_counts[curr_code] = 0\n",
+    "                    code_counts[curr_code] += 1\n",
+    "                \n",
+    "        code_tuples = list(code_counts.items())\n",
+    "        code_tuples.sort(key=lambda x: x[1],reverse=True)\n",
+    "        return code_tuples"
    ]
   },
   {
@@ -423,9 +455,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Need some 420. #weed'"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets =Tweets()\n",
     "tweets.readTweets(\"tweets-fake.json\")\n",
@@ -451,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,9 +510,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MARIJUANA'}"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets.getCodes(td)"
    ]
@@ -483,9 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Too funny - what have you been smoking..?'"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "td = working[1]\n",
     "tweets.getText(td)"
@@ -500,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,9 +581,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Three weeks off of smoking cigarettes. #feelingood'"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "td = working[2]\n",
     "tweets.getText(td)"
@@ -526,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,9 +618,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'FDA begins anti-smoking efforts https://www.fda.gov @fda'"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "td = working[3]\n",
     "tweets.getText(td)"
@@ -559,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,9 +655,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Juul is cool. Not.'"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "td = working[4]\n",
     "tweets.getText(td)"
@@ -585,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,9 +699,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'MARIJUANA'}\n",
+      "{'MARIJUANA'}\n",
+      "{'QUITTING', 'BENEFITS'}\n",
+      "{'USERMENTION', 'LINK', 'GOVERNMENT', 'QUITTING'}\n",
+      "{'VAPING', 'NEGATIVE'}\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    td=working[i]\n",
@@ -621,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,11 +750,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Juul is cool. Not.\n",
+      "{'VAPING', 'NEGATIVE'}\n",
+      "Juul is cool. Not.\n",
+      "{'VAPING', 'NEGATIVE'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(tweets.getText(td))\n",
     "print(tweets.getCodes(td))\n",
@@ -653,15 +774,44 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "****\n",
+    "# ****\n",
     "# Exercise 2.1: Examining the distribution of codes across a corpus\n",
     "\n",
     "Having annotated a number of tweets, you might want to get an idea of how many tweets are being used and how often. Write a new method inside the `Tweets` class to provide a list of codes and counts, sorted by frequency.  Please be sure to reload the tweets after you redefine the class.\n",
     "\n",
-    "*ANSWER FOLLOWS - insert here*\n"
+    "*ANSWER FOLLOWS - insert here*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('MARIJUANA', 2),\n",
+       " ('QUITTING', 2),\n",
+       " ('BENEFITS', 1),\n",
+       " ('USERMENTION', 1),\n",
+       " ('GOVERNMENT', 1),\n",
+       " ('LINK', 1),\n",
+       " ('VAPING', 1),\n",
+       " ('NEGATIVE', 1)]"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets2.mostFrequentCodes()"
    ]
   },
   {
@@ -669,7 +819,7 @@
    "metadata": {},
    "source": [
     "*END CUT HERE*\n",
-    "****"
+    "****  "
    ]
   },
   {
@@ -681,10 +831,61 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 246,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 Health impacts of #smoking across our bodies. Know more: http://www.nih.gov. #health #cigarettes\n",
+      "6 Scott Gottlieb of @FDA says 8 million lives could be saved by cutting nicotine levels #publichealth https://phony.url/123\n",
+      "7 Are e-cigarettes bad for teens? Research is conflicted\n",
+      "8 E-cigarette use before 18 linked to later use of cigarettes\n",
+      "9 Research says loneliness as bad as smoking for health\n",
+      "10 Smoking is worse than vaping? Sure, but both stink\n",
+      "11 Always have the munchies. Time to stop smoking weed :-)\n",
+      "12 How about smoking bans in public places? Yes? No? #smoking #parks\n",
+      "13 Still trying to quit smoking, #noteasy\n",
+      "14 won't use e-cig if I can use a real cig\n"
+     ]
+    }
+   ],
    "source": [
-    "*ANSWER FOLLOWS - insert here*"
+    "#*ANSWER FOLLOWS - insert here*\n",
+    "for i in range(5, len(working)):\n",
+    "    print(i, tweets.getText(working[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "codes_to_add = {}\n",
+    "codes_to_add[5] = ['HEALTH', 'TOBACCO']\n",
+    "codes_to_add[6] = ['LINK', 'TOBACCO', 'BENIFITS']\n",
+    "codes_to_add[7] = ['TOBACCO', 'HEALTH']\n",
+    "codes_to_add[8] = ['TOBACCO', 'NEGATIVE']\n",
+    "codes_to_add[9] = ['TOBACCO', 'NEGATIVE', 'HEALTH']\n",
+    "codes_to_add[10] = ['TOBACCO', 'HEALTH']\n",
+    "codes_to_add[11] = ['NEGATIVE', 'MARIJUANA']\n",
+    "codes_to_add[12] = ['TOBACCO', 'GOVERNMENT']\n",
+    "codes_to_add[13] = ['TOBACCO']\n",
+    "codes_to_add[14] = ['TOBACCO']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(5, len(working)):\n",
+    "    tweets.addCodes(working[i],codes_to_add[i])\n",
+    "tweets.saveTweets(\"tweets-fake-coded.json\")"
    ]
   },
   {
@@ -712,7 +913,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "*ANSWER FOLLOWS - insert here*"
+    "*ANSWER FOLLOWS - insert here*\n",
+    "\n",
+    "Distinguishing smoking tobacco and smoking weed is difficult. \n",
+    "I would add the 'QUITTING' code to my code set (tweets 11 and 13) and the 'VAPING' code to my code set (tweets 7, 10, and 14). "
    ]
   },
   {
@@ -739,7 +943,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "*ANSWER FOLLOWS - insert here*"
+    "*ANSWER FOLLOWS - insert here*\n",
+    "\n",
+    "Strengths are ease of implementation, easy to transfer, easy to access. \n",
+    "A weakness is that it will not scale to large tweet corpra. The data structrue size will eventually get larger than memory. \n",
+    "\n",
+    "An alternative would be to store the tweets in a database, such as MySQL. "
    ]
   },
   {
@@ -764,9 +973,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -778,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
