--- a/SocialMedia - Part 0.ipynb
+++ b/SocialMedia - Part 0.ipynb
@@ -102,9 +102,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "Requirement already satisfied: numpy in /Users/runy1/anaconda3/lib/python3.6/site-packages (1.15.3)\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "Collecting maplotlib\n",
+      "\u001b[31m  Could not find a version that satisfies the requirement maplotlib (from versions: )\u001b[0m\n",
+      "\u001b[31mNo matching distribution found for maplotlib\u001b[0m\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "Collecting jsonpickle\n",
+      "  Downloading https://files.pythonhosted.org/packages/ca/ce/97404d5aeb58e6155c216825c81b50f6eca8a5345c582317ae48391878f8/jsonpickle-1.0-py2.py3-none-any.whl\n",
+      "Installing collected packages: jsonpickle\n",
+      "Successfully installed jsonpickle-1.0\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "Collecting spacy\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/bb/7b/d583368da2e4251cf69edac069f1dea45ba70f463cbec6eb68507286eb54/spacy-2.0.16-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (25.7MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 25.7MB 2.1MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting murmurhash<1.1.0,>=0.28.0 (from spacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/2b/f4/7453bbcdbda5b2feacc79f7e05cdc70e84e270ad36134019ca25979cc68d/murmurhash-1.0.1-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl\n",
+      "Requirement already satisfied: numpy>=1.15.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from spacy) (1.15.3)\n",
+      "Collecting msgpack-numpy<0.4.4 (from spacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/ad/45/464be6da85b5ca893cfcbd5de3b31a6710f636ccb8521b17bd4110a08d94/msgpack_numpy-0.4.3.2-py2.py3-none-any.whl\n",
+      "Collecting regex==2018.01.10 (from spacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/76/f4/7146c3812f96fcaaf2d06ff6862582302626a59011ccb6f2833bb38d80f7/regex-2018.01.10.tar.gz (612kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 614kB 5.3MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting ujson>=1.35 (from spacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/16/c4/79f3409bc710559015464e5f49b9879430d8f87498ecdc335899732e5377/ujson-1.35.tar.gz (192kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 194kB 5.8MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting plac<1.0.0,>=0.9.6 (from spacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/9e/9b/62c60d2f5bc135d2aa1d8c8a86aaf84edb719a59c7f11a4316259e61a298/plac-0.9.6-py2.py3-none-any.whl\n",
+      "Collecting dill<0.3,>=0.2 (from spacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/6f/78/8b96476f4ae426db71c6e86a8e6a81407f015b34547e442291cd397b18f3/dill-0.2.8.2.tar.gz (150kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 153kB 5.6MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting preshed<2.1.0,>=2.0.1 (from spacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cb/5a/4b6f2035443e463a326e3a81863f2b4850be76b4538fd4931b1aa63f79b6/preshed-2.0.1-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (148kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 153kB 6.7MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting thinc<6.13.0,>=6.12.0 (from spacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b3/06/b0ea04f8fa16fa95d3c2763e9725324d40957441a7ce5b51c63984efa1bd/thinc-6.12.0-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (2.7MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 2.7MB 3.3MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting cymem<2.1.0,>=2.0.2 (from spacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/db/6e/c6d1650f09b8b2910f149ec7c51fd2298e0e93a657f4496d4636c0a43675/cymem-2.0.2-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (52kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 61kB 7.2MB/s ta 0:00:011\n",
+      "\u001b[?25hRequirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from spacy) (2.19.1)\n",
+      "Requirement already satisfied: msgpack>=0.3.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from msgpack-numpy<0.4.4->spacy) (0.5.6)\n",
+      "Requirement already satisfied: wrapt<1.11.0,>=1.10.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from thinc<6.13.0,>=6.12.0->spacy) (1.10.11)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.10.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from thinc<6.13.0,>=6.12.0->spacy) (4.26.0)\n",
+      "Requirement already satisfied: cytoolz<0.10,>=0.9.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from thinc<6.13.0,>=6.12.0->spacy) (0.9.0.1)\n",
+      "Requirement already satisfied: six<2.0.0,>=1.10.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from thinc<6.13.0,>=6.12.0->spacy) (1.11.0)\n",
+      "Requirement already satisfied: idna<2.8,>=2.5 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.7)\n",
+      "Requirement already satisfied: urllib3<1.24,>=1.21.1 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.23)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2018.10.15)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.0.4)\n",
+      "Requirement already satisfied: toolz>=0.8.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from cytoolz<0.10,>=0.9.0->thinc<6.13.0,>=6.12.0->spacy) (0.9.0)\n",
+      "Installing collected packages: murmurhash, msgpack-numpy, regex, ujson, plac, dill, cymem, preshed, thinc, spacy\n",
+      "  Running setup.py install for regex ... \u001b[?25ldone\n",
+      "\u001b[?25h  Running setup.py install for ujson ... \u001b[?25ldone\n",
+      "\u001b[?25h  Running setup.py install for dill ... \u001b[?25ldone\n",
+      "\u001b[?25hSuccessfully installed cymem-2.0.2 dill-0.2.8.2 msgpack-numpy-0.4.3.2 murmurhash-1.0.1 plac-0.9.6 preshed-2.0.1 regex-2018.1.10 spacy-2.0.16 thinc-6.12.0 ujson-1.35\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "Requirement already satisfied: scikit-learn in /Users/runy1/anaconda3/lib/python3.6/site-packages (0.20.0)\n",
+      "Requirement already satisfied: numpy>=1.8.2 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from scikit-learn) (1.15.3)\n",
+      "Requirement already satisfied: scipy>=0.13.3 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from scikit-learn) (1.1.0)\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip/http' or its parent directory is not owned by the current user and the cache has been disabled. Please check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "\u001b[33mThe directory '/Users/runy1/Library/Caches/pip' or its parent directory is not owned by the current user and caching wheels has been disabled. check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\u001b[0m\n",
+      "Collecting tweepy\n",
+      "  Downloading https://files.pythonhosted.org/packages/05/f1/2e8c7b202dd04117a378ac0c55cc7dafa80280ebd7f692f1fa8f27fd6288/tweepy-3.6.0-py2.py3-none-any.whl\n",
+      "Collecting requests-oauthlib>=0.7.0 (from tweepy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/94/e7/c250d122992e1561690d9c0f7856dadb79d61fd4bdd0e598087dce607f6c/requests_oauthlib-1.0.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: six>=1.10.0 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from tweepy) (1.11.0)\n",
+      "Requirement already satisfied: PySocks>=1.5.7 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from tweepy) (1.6.8)\n",
+      "Requirement already satisfied: requests>=2.11.1 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from tweepy) (2.19.1)\n",
+      "Collecting oauthlib>=0.6.2 (from requests-oauthlib>=0.7.0->tweepy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e6/d1/ddd9cfea3e736399b97ded5c2dd62d1322adef4a72d816f1ed1049d6a179/oauthlib-2.1.0-py2.py3-none-any.whl (121kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 122kB 3.4MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: urllib3<1.24,>=1.21.1 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (1.23)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (2018.10.15)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.8,>=2.5 in /Users/runy1/anaconda3/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (2.7)\n",
+      "Installing collected packages: oauthlib, requests-oauthlib, tweepy\n",
+      "Successfully installed oauthlib-2.1.0 requests-oauthlib-1.0.0 tweepy-3.6.0\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install numpy\n",
     "!pip install maplotlib\n",
@@ -206,9 +314,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -220,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
